--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
             <div class="content">
               <div class="inner">
                 <h1>Hi, Im TakuSemba</h1>
-                <p><!--[--><h3>I Love Internet. Im a Android developer.</h3><!--]--></p>
+                <p><!--[--><h3>I Love Internet. Im an Android developer.</h3><!--]--></p>
               </div>
             </div>
             <nav>
