--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <meta name="keywords" content="portflio" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
-<link rel="canonical" href="http://takusemba.com/" />
+<link rel="canonical" href="/" />
 
 
     <title>
@@ -33,7 +33,7 @@
 
 <meta itemprop="name" content="Taku Semba">
 <meta itemprop="description" content="Homepage and blog by Djordje Atlialp"><meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="http://takusemba.com"/>
+<meta name="twitter:image" content="/"/>
 
 <meta name="twitter:title" content="Taku Semba"/>
 <meta name="twitter:description" content="Homepage and blog by Djordje Atlialp"/>
@@ -44,7 +44,7 @@
 
 
 
-<link rel="alternate" type="application/rss+xml" href="http://takusemba.com/index.xml" title="Taku Semba" />
+<link rel="alternate" type="application/rss+xml" href="/index.xml" title="Taku Semba" />
 
 
 
@@ -69,7 +69,7 @@
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="http://takusemba.com/about/">About</a></li><li><a href="http://takusemba.com/posts/">Posts</a></li><li><a href="http://takusemba.com/presentations/">Presentations</a></li>
+    <ul class="menu__inner"><li><a href="/about/">About</a></li><li><a href="/posts/">Posts</a></li><li><a href="/presentations/">Presentations</a></li>
     </ul>
 </nav>
 
