add public files

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -136,7 +136,7 @@ I mainly work on Android, and strong interested in Media Streaming, Crypto Curre
 <p><strong>Mar 2018 ~ Aug 2019 <a href="https://ginco.io/en/">Ginco</a></strong></p>
 <p>Ginco is the universal asset hub in the crypto ecosystem. Supporting Bitcoin, BitcoinCash, LTC, ETH and ERC20s.</p>
 <p><strong>Sept 2015 ~ Mar 2016 <a href="https://eure.jp">Pairs</a></strong></p>
-<p>Pairs is one of the popular dating app in Japan. It was launched on 2014 but it has already become one of the largest dating apps in Japan with more than 450,000 member</p>
+<p>Pairs is one of the popular dating app in Japan. It was launched on 2014 but it has already become one of the largest dating apps in Japan with more than 450,000 members.</p>
 <h2 id="oss">OSS</h2>
 <p><strong><a href="https://github.com/TakuSemba/Spotlight">Spotlight</a> 2.4k stars</strong></p>
 <p>Android Library that lights items for tutorials or walk-throughs etc&hellip;</p>
