fix description for header

--- a/public/404.html
+++ b/public/404.html
@@ -31,11 +31,11 @@
 
 
 <meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content="Homepage and blog by Djordje Atlialp"><meta name="twitter:card" content="summary_large_image"/>
+<meta itemprop="description" content="TakuSemba&#39;s Portfolio"><meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="/"/>
 
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="Homepage and blog by Djordje Atlialp"/>
+<meta name="twitter:description" content="TakuSemba&#39;s Portfolio"/>
 
 
 
