--- a/public/index.html
+++ b/public/index.html
@@ -32,11 +32,11 @@
 
 
 <meta itemprop="name" content="Taku Semba">
-<meta itemprop="description" content="Homepage and blog by Djordje Atlialp"><meta name="twitter:card" content="summary_large_image"/>
+<meta itemprop="description" content="TakuSemba&#39;s Portfolio"><meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="/"/>
 
 <meta name="twitter:title" content="Taku Semba"/>
-<meta name="twitter:description" content="Homepage and blog by Djordje Atlialp"/>
+<meta name="twitter:description" content="TakuSemba&#39;s Portfolio"/>
 
 
 
