--- a/public/about/index.html
+++ b/public/about/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="author" content="">
 <meta name="description" content="Hi, my name is Taku Semba. I mainly work on Android, and strong interested in Media Streaming, Crypto Currency, Kubernetes/Docker, Kotlin Multi Platform.
-Carrier Jan 2017 ~ current AbemaTV
+Career Jan 2017 ~ current AbemaTV
 AbemaTV is a new video streaming service that airs TV show 24 hours straight with variety of channels.
 Mar 2018 ~ Aug 2019 Ginco
 Ginco is the universal asset hub in the crypto ecosystem and provides a wallet app. Supporting Bitcoin, BitcoinCash, LTC, ETH and ERC20s." />
@@ -36,7 +36,7 @@ Ginco is the universal asset hub in the crypto ecosystem and provides a wallet a
 
 <meta itemprop="name" content="About Me">
 <meta itemprop="description" content="Hi, my name is Taku Semba. I mainly work on Android, and strong interested in Media Streaming, Crypto Currency, Kubernetes/Docker, Kotlin Multi Platform.
-Carrier Jan 2017 ~ current AbemaTV
+Career Jan 2017 ~ current AbemaTV
 AbemaTV is a new video streaming service that airs TV show 24 hours straight with variety of channels.
 Mar 2018 ~ Aug 2019 Ginco
 Ginco is the universal asset hub in the crypto ecosystem and provides a wallet app. Supporting Bitcoin, BitcoinCash, LTC, ETH and ERC20s.">
@@ -52,7 +52,7 @@ Ginco is the universal asset hub in the crypto ecosystem and provides a wallet a
 
 <meta name="twitter:title" content="About Me"/>
 <meta name="twitter:description" content="Hi, my name is Taku Semba. I mainly work on Android, and strong interested in Media Streaming, Crypto Currency, Kubernetes/Docker, Kotlin Multi Platform.
-Carrier Jan 2017 ~ current AbemaTV
+Career Jan 2017 ~ current AbemaTV
 AbemaTV is a new video streaming service that airs TV show 24 hours straight with variety of channels.
 Mar 2018 ~ Aug 2019 Ginco
 Ginco is the universal asset hub in the crypto ecosystem and provides a wallet app. Supporting Bitcoin, BitcoinCash, LTC, ETH and ERC20s."/>
@@ -130,7 +130,7 @@ Ginco is the universal asset hub in the crypto ecosystem and provides a wallet a
                 <hr>
 <p>Hi, my name is Taku Semba.
 I mainly work on Android, and strong interested in Media Streaming, Crypto Currency, Kubernetes/Docker, Kotlin Multi Platform.</p>
-<h2 id="carrier">Carrier</h2>
+<h2 id="career">Career</h2>
 <p><strong>Jan 2017 ~ current <a href="https://play.google.com/store/apps/details?id=tv.abema">AbemaTV</a></strong></p>
 <p>AbemaTV is a new video streaming service that airs TV show 24 hours straight with variety of channels.</p>
 <p><strong>Mar 2018 ~ Aug 2019 <a href="https://ginco.io/en/">Ginco</a></strong></p>
