--- a/public/404.html
+++ b/public/404.html
@@ -31,7 +31,8 @@
 
 
 <meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content="TakuSemba&#39;s Portfolio"><meta name="twitter:card" content="summary_large_image"/>
+<meta itemprop="description" content="TakuSemba&#39;s Portfolio">
+<meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="/"/>
 
 <meta name="twitter:title" content="404 Page not found"/>
@@ -113,7 +114,6 @@
     <div class="footer__inner">
         <div class="footer__content">
             <span>Powered by <a href="http://gohugo.io">Hugo</a></span>
-            <span>Made with &#10084; by <a href="https://github.com/rhazdon">rhazdon</a></span>
         </div>
     </div>
 </footer>
