build with google ad metatag

--- a/public/presentations/presentation_6/index.html
+++ b/public/presentations/presentation_6/index.html
@@ -11,6 +11,7 @@
 <meta name="keywords" content="portflio"/>
 <meta name="robots" content="noodp"/>
 <meta name="theme-color" content=""/>
+<meta name="google-adsense-account" content="ca-pub-8467028060448943">
 <link rel="canonical" href="/presentations/presentation_6/"/>
 
 
@@ -46,7 +47,7 @@
 
 
 
-<meta property="article:published_time" content="2018-02-08 00:00:00 &#43;0900 &#43;0900"/>
+<meta property="article:published_time" content="2018-02-08 00:00:00 &#43;0900 JST"/>
 
 
 
