--- a/public/404.html
+++ b/public/404.html
@@ -11,6 +11,7 @@
 <meta name="keywords" content="portflio"/>
 <meta name="robots" content="noodp"/>
 <meta name="theme-color" content=""/>
+<meta name="google-adsense-account" content="ca-pub-8467028060448943">
 <link rel="canonical" href="/404.html"/>
 
 
