--- a/public/about/index.html
+++ b/public/about/index.html
@@ -15,6 +15,7 @@ Ginco is the universal asset hub in the crypto ecosystem and provides a wallet a
 <meta name="keywords" content="portflio"/>
 <meta name="robots" content="noodp"/>
 <meta name="theme-color" content=""/>
+<meta name="google-adsense-account" content="ca-pub-8467028060448943">
 <link rel="canonical" href="/about/"/>
 
 
@@ -58,7 +59,7 @@ Ginco is the universal asset hub in the crypto ecosystem and provides a wallet a
 
 
 
-<meta property="article:published_time" content="2020-01-01 08:49:15 &#43;0900 &#43;0900"/>
+<meta property="article:published_time" content="2020-01-01 08:49:15 &#43;0900 JST"/>
 
 
 
