--- a/public/presentations/index.html
+++ b/public/presentations/index.html
@@ -8,7 +8,7 @@
       content="">
 <meta name="description"
       content=""/>
-<meta name="keywords" content="portflio"/>
+<meta name="keywords" content="homepage, blog, science, informatics, development, programming"/>
 <meta name="robots" content="noodp"/>
 <meta name="theme-color" content=""/>
 <link rel="canonical" href="/presentations/"/>
@@ -33,10 +33,8 @@
 
 
 <meta itemprop="name" content="Presentations">
-<meta itemprop="description" content="TakuSemba&#39;s Portfolio"><meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="/"/>
-
-<meta name="twitter:title" content="Presentations"/>
+<meta itemprop="description" content="TakuSemba&#39;s Portfolio"><meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:image" content="/" /><meta name="twitter:title" content="Presentations"/>
 <meta name="twitter:description" content="TakuSemba&#39;s Portfolio"/>
 
 
@@ -233,7 +231,7 @@
 
 
 
-<script type="text/javascript" src="/bundle.min.08ccaf9cef8b4e0ebd0b0158e66a7bfc0ddbb2194cdb0099e8814ddb89cc7628b27b1158846564e6e03d9ffc5f4d1bc7dfc274d359f9408d1c63d73a3f7332e9.js" integrity="sha512-CMyvnO&#43;LTg69CwFY5mp7/A3bshlM2wCZ6IFN24nMdiiyexFYhGVk5uA9n/xfTRvH38J001n5QI0cY9c6P3My6Q=="></script>
+<script type="text/javascript" src="/bundle.min.95a580d2760a7c61b137347a2a3d969b138d438ba692e35806d8924009edde68456ebac9689ca1e98e44cd34177093d0d5e6a4d490e4623c59ee6e4f5899232f.js" integrity="sha512-laWA0nYKfGGxNzR6Kj2WmxONQ4umkuNYBtiSQAnt3mhFbrrJaJyh6Y5EzTQXcJPQ1eak1JDkYjxZ7m5PWJkjLw=="></script>
 
 
 
